# Single-View-3D-Reconstruction-with-Semantic-Shape-Priors

./: .gitignore  README.md  app.py  config.ini  config.py  inference.py  main.py  pyproject.toml  requirements.txt
models/: decoder.py  encoder.py  lstm_shape_encoder.py  mem3d.py  memory_module.py
trainer/: mem3d_trainer.py
utils/: binvox_rw.py  data_loaders.py  dataset.py  losses.py
